# wireforge

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.sh  clippy.toml  install.sh  run.sh  rustfmt.toml
.github/workflows/: ci.yml
config/: wireforge.sample.toml
crates/wireforge-api/: Cargo.toml
crates/wireforge-api/src/: auth.rs  lib.rs
crates/wireforge-api/src/v1/: dto.rs  health.rs  interfaces.rs  mod.rs  peers.rs  tokens.rs
crates/wireforge-bin/: Cargo.toml
crates/wireforge-bin/src/: config.rs  main.rs  poller.rs  scheduler.rs
crates/wireforge-cli/: Cargo.toml
crates/wireforge-cli/src/: backup.rs  main.rs
crates/wireforge-core/: Cargo.toml
crates/wireforge-core/src/: error.rs  lib.rs  peer_conf.rs
crates/wireforge-core/src/application/: mod.rs
crates/wireforge-core/src/application/ports/: mod.rs  nat.rs  repositories.rs  sysnet.rs  wireguard.rs
crates/wireforge-core/src/application/services/: auth.rs  interface.rs  mod.rs  peer.rs  settings.rs
crates/wireforge-core/src/crypto/: api_token.rs  mod.rs  passwords.rs  secrets.rs  totp.rs  wg_keys.rs
crates/wireforge-core/src/domain/: api_token.rs  audit.rs  ban.rs  identity.rs  interface.rs  keys.rs  mod.rs  peer.rs  role.rs  settings.rs  sysnet.rs  user.rs  webhook.rs
crates/wireforge-infra/: Cargo.toml
crates/wireforge-infra/src/: lib.rs
crates/wireforge-infra/src/nat/: mod.rs
crates/wireforge-infra/src/persistence/: api_tokens.rs  audit.rs  bans.rs  interfaces.rs  mod.rs  peers.rs  settings.rs  traffic.rs  users.rs  webhooks.rs
crates/wireforge-infra/src/sysnet/: mod.rs
crates/wireforge-infra/src/wireguard/: mod.rs
crates/wireforge-web/: Cargo.toml
crates/wireforge-web/i18n/: en.ftl  tr.ftl
crates/wireforge-web/src/: app_state.rs  audit.rs  error.rs  flash.rs  i18n.rs  lib.rs  templates.rs  webhook_dispatcher.rs
crates/wireforge-web/src/extractors/: auth_user.rs  mod.rs
crates/wireforge-web/src/middleware/: mod.rs
crates/wireforge-web/src/routes/: audit.rs  auth.rs  dashboard.rs  health.rs  interfaces.rs  metrics.rs  mod.rs  peers.rs  profile.rs  settings.rs  system.rs  ws.rs
crates/wireforge-web/static/css/: app.css
crates/wireforge-web/templates/: _macros.html
crates/wireforge-web/templates/audit/: list.html
crates/wireforge-web/templates/auth/: login.html  setup.html  totp.html
crates/wireforge-web/templates/dashboard/: index.html
crates/wireforge-web/templates/errors/: error.html
crates/wireforge-web/templates/interfaces/: edit.html  list.html  new.html
crates/wireforge-web/templates/layouts/: app.html  base.html
crates/wireforge-web/templates/peers/: _row_enabled.html  created.html  edit.html  list.html  new.html
crates/wireforge-web/templates/profile/: index.html  totp_setup.html
crates/wireforge-web/templates/settings/: index.html
crates/wireforge-web/templates/system/: index.html
deploy/docker/: Dockerfile  docker-compose.yaml
deploy/helm/wireforge/: Chart.yaml  values.yaml
deploy/helm/wireforge/templates/: configmap.yaml  secret.yaml  service.yaml  statefulset.yaml
deploy/systemd/: wireforge.service
docs/: book.toml
docs/src/: SUMMARY.md  auth.md  changelog.md  config.md  introduction.md
docs/src/install/: docker.md  index.md  kubernetes.md  systemd.md
docs/src/ops/: audit.md  backup.md  interfaces.md  metrics.md  webhooks.md
docs/src/reference/: api.md  cli.md  migrating.md
migrations/: 0001_initial.sql  0002_peer_private_key.sql  0003_settings.sql  0004_peer_dns_nat.sql  0005_add_gateway.sql
