[workspace]
resolver = "2"
members = [
    "crates/wireforge-core",
    "crates/wireforge-infra",
    "crates/wireforge-web",
    "crates/wireforge-api",
    "crates/wireforge-cli",
    "crates/wireforge-bin",
]
default-members = ["crates/wireforge-bin"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Can Acar <kivibilgi@gmail.com>"]
repository = "https://github.com/can-acar/wireforge"
homepage = "https://github.com/can-acar/wireforge"
description = "Next-generation WireGuard management platform with RBAC, 2FA, real-time monitoring and OpenAPI."

[workspace.dependencies]
# --- Async runtime ---
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

# --- Web framework ---
axum = { version = "0.8", features = ["macros", "ws", "tracing"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "cors", "fs", "request-id", "limit", "set-header", "timeout"] }
tower-sessions = "0.14"
# tower-sessions-sqlx-store ekosistemi (0.14/0.15) şu an tower-sessions-core
# versiyonlarında çelişkili; Faz 3'te yeniden ele alınacak. Şimdilik MemoryStore.
hyper = "1"

# --- Templating ---
askama = "0.14"

# --- Database ---
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate", "chrono", "uuid", "json"] }

# --- Auth & crypto ---
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }
jsonwebtoken = "9"
totp-rs = { version = "5", features = ["qr", "gen_secret", "otpauth"] }
age = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
getrandom = "0.2"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# --- Authorization ---
casbin = "2"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
toml = "0.8"

# --- Validation ---
validator = { version = "0.18", features = ["derive"] }

# --- Config ---
figment = { version = "0.10", features = ["toml", "env"] }

# --- Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# --- Errors ---
thiserror = "1"
anyhow = "1"

# --- Time ---
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "macros"] }

# --- IDs ---
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# --- CLI ---
clap = { version = "4", features = ["derive", "env"] }

# --- QR & images ---
qrcode = "0.14"

# --- Metrics ---
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# --- OpenAPI ---
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# --- WireGuard ---
defguard_wireguard_rs = "0.8"

# --- i18n ---
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"

# --- Misc ---
libc = "0.2"
once_cell = "1"
parking_lot = "0.12"
url = "2"
ipnet = { version = "2", features = ["serde"] }
governor = "0.7"
mime = "0.3"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
hmac = "0.12"

# --- Internal crates ---
wireforge-core = { path = "crates/wireforge-core" }
wireforge-infra = { path = "crates/wireforge-infra" }
wireforge-web = { path = "crates/wireforge-web" }
wireforge-api = { path = "crates/wireforge-api" }

# also expose web as workspace dep for api+bin reusability above.

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
incremental = true
