[package]
name = "wireforge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Wireforge — domain & application layer (framework-free)"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
ipnet.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true
url.workspace = true

# Crypto (domain-level)
argon2.workspace = true
password-hash.workspace = true
age.workspace = true
rand.workspace = true
rand_core.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
totp-rs.workspace = true
qrcode.workspace = true

[dev-dependencies]
tokio = { workspace = true }
