[package]
name = "wireforge-infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Wireforge — infrastructure adapters (SQLite, WireGuard, notifier)"

[dependencies]
wireforge-core.workspace = true

async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
ipnet.workspace = true
libc.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

# WireGuard adapter
defguard_wireguard_rs.workspace = true

[dev-dependencies]
tokio = { workspace = true }
